[gd_scene load_steps=2 format=2]

[ext_resource path="res://train_control_gui.gd" type="Script" id=1]

[node name="TrainControlGui" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -787.0
margin_bottom = -524.0
rect_min_size = Vector2( 0, 44 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
train_label = NodePath("VBoxContainer/Label")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -835.0
margin_bottom = -556.0
rect_min_size = Vector2( 0, 44 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 189.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "train_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 189.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 45.0
margin_right = 85.0
margin_bottom = 20.0
text = "stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connect_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 89.0
margin_right = 152.0
margin_bottom = 20.0
text = "connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 156.0
margin_right = 189.0
margin_bottom = 20.0
text = "run"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/connect_button" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/run_button" to="." method="_on_run_button_pressed"]
